[package]
name = "price_of_hierarchy"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-set = "0.8.0"
grb = {version = "3.0.1", features = ['gurobi12']}
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ordered-float = "5.0.0"
ordermap = "0.5.5"
pathfinding = "4.14.0"
rand = "0.8"
rayon = "1.10.0"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
cargo = "warn"
allow_attributes_without_reason = "warn"
create_dir = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "warn"
mod_module_files = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
panic_in_result_fn = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
wildcard_enum_match_arm = "warn"
