[package]
name = "price_of_hierarchy"
version = "0.1.0"
edition = "2021"

[dependencies]
clustering = "0.2.1"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
pathfinding = "4.14.0"
rand = "0.8"
rayon = "1.10.0"
rustc-hash = "2.1.1"
smallvec = "1.14.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
cargo = "warn"
allow_attributes_without_reason = "warn"
create_dir = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "warn"
mod_module_files = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
panic_in_result_fn = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
wildcard_enum_match_arm = "warn"
trivially_copy_pass_by_ref = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
